--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
     
     <div class="container">
+      <div class="border"></div>
     <div class="grid">
       <div class = "squares"></div>
       <div class = "squares"></div>
@@ -368,39 +369,8 @@
       <div class="taken"></div>
     </div>
 
+    <div class="border-grid"></div>
     <div class="mini-grid">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
       <div></div>
       <div></div>
       <div></div>
