--- a/index.html
+++ b/index.html
@@ -149,14 +149,21 @@
       </div>
       <!-- bottone e score -->
       <div class="settings">
+          <!-- <button id="start-btn">Start</button> -->
+          <div class="button-container">
+            <a href="#">
+              <span id="start-btn">
+                Start
+              </span>
+            </a>
+          </div>
           <h3>Score: <span id="score">0</span></h3>
-          <button id="start-btn">Start</button>
       </div>
 
     
-    <div class="container">
+    <div class="container-grid">
       <div class="border"></div>
-    <div class="grid">
+      <div class="grid">
       <div class = "squares"></div>
       <div class = "squares"></div>
       <div class = "squares"></div>
@@ -367,29 +374,30 @@
       <div class="taken"></div>
       <div class="taken"></div>
       <div class="taken"></div>
-    </div>
+      </div>
+  </div> 
 
+  <div class="container-mini">
     <div class="border-grid"></div>
     <div class="mini-grid">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
+      <div class="mini"></div>
     </div>
-
-  </div> 
+  </div>
     </main>
 
 
